--- a/react/package.json
+++ b/react/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "bootstrap": "^5.3.2",
     "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
