--- a/react/package.json
+++ b/react/package.json
@@ -19,6 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
+    "react-select": "^5.7.7",
+    "reactstrap": "^9.2.0",
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
